--- a/client/scss/style.css
+++ b/client/scss/style.css
@@ -2,22 +2,33 @@ body {
   background-color: whitesmoke;
 }
 
-body .article_product {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  border: 1px solid black;
-  background-color: white;
-  padding: 1rem;
+body header .item_category {
+  cursor: pointer;
 }
 
-body .article_product img {
-  width: 250px;
-  -o-object-fit: cover;
-     object-fit: cover;
+body main {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-body .article_product h4 {
-  text-align: center;
+body main .products_container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body main .products_container article .img_card {
+  height: 18rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media only screen and (max-width: 576px) {
+  body main .products_container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
