--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,25 +1,34 @@
 body {
   background-color: whitesmoke;
 
-  .article_product {
-    width: fit-content;
-    border: 1px solid black;
-    background-color: white;
-    padding: 1rem;
-
-    img {
-      width: 250px;
-      object-fit: cover;
+  header {
+    .item_category {
+      cursor: pointer;
     }
+  }
 
-    h4 {
-      text-align: center;
+  main {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 2rem;
+
+    .products_container {
+      justify-content: space-between;
+
+      article {
+        .img_card {
+          height: 18rem;
+          object-fit: contain;
+        }
+      }
     }
+  }
 
-    // div {
-    //   display: flex;
-    //   flex-direction: column;
-    //   align-items: center;
-    // }
+  @media only screen and (max-width: 576px) {
+    main {
+      .products_container {
+        justify-content: center;
+      }
+    }
   }
 }
