--- a/client/scss/style.css
+++ b/client/scss/style.css
@@ -12,6 +12,15 @@ body main {
   padding: 2rem;
 }
 
+body main .spiner_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body main .products_container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -22,6 +31,10 @@ body main .products_container article .img_card {
   height: 18rem;
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+body footer {
+  padding: 3rem 0;
 }
 
 @media only screen and (max-width: 576px) {
