--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -10,7 +10,6 @@ body {
   main {
     max-width: 1440px;
     margin: 0 auto;
-    padding: 2rem;
 
     .spiner_container {
       display: flex;
@@ -18,26 +17,46 @@ body {
     }
 
     .products_container {
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 1rem;
+      margin-top: 2rem;
 
       article {
+        justify-self: center;
+        transition: 0.1s;
+
         .img_card {
-          height: 18rem;
+          height: 16rem;
           object-fit: contain;
         }
+
+        &:hover {
+          box-shadow: 0px 0px 7px 0px rgb(200, 200, 200);
+          transform: scale(1.01);
+          z-index: 100;
+        }
+      }
+
+      @media only screen and (max-width: 1100px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media only screen and (max-width: 830px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media only screen and (max-width: 555px) {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .pagination_container {
+      .page-item {
+        cursor: pointer;
       }
     }
   }
 
   footer {
     padding: 3rem 0;
-  }
-
-  @media only screen and (max-width: 576px) {
-    main {
-      .products_container {
-        justify-content: center;
-      }
-    }
   }
 }
