feat (client): doc html + sassCompiler fixed

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,63 +1,2 @@
-body {
-  background-color: whitesmoke;
-
-  header {
-    margin-bottom: 2rem;
-
-    .item_category {
-      cursor: pointer;
-    }
-  }
-
-  main {
-    max-width: 1440px;
-    margin: 0 auto;
-
-    .spiner_container {
-      display: flex;
-      justify-content: center;
-    }
-
-    .products_container {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 1rem;
-
-      article {
-        justify-self: center;
-        transition: 0.1s;
-
-        .img_card {
-          height: 16rem;
-          object-fit: contain;
-        }
-
-        &:hover {
-          box-shadow: 0px 0px 7px 0px rgb(200, 200, 200);
-          transform: scale(1.01);
-          z-index: 100;
-        }
-      }
-
-      @media only screen and (max-width: 1100px) {
-        grid-template-columns: repeat(3, 1fr);
-      }
-      @media only screen and (max-width: 830px) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-      @media only screen and (max-width: 555px) {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .pagination_container {
-      .page-item {
-        cursor: pointer;
-      }
-    }
-  }
-
-  footer {
-    padding: 3rem 0;
-  }
-}
+@import "./index.scss";
+@import "./doc.scss";
