--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,84 +1,66 @@
 body {
   background-color: whitesmoke;
 }
-
 body header {
   margin-bottom: 2rem;
 }
-
 body header .item_category {
   cursor: pointer;
 }
-
 body main {
   max-width: 1440px;
   margin: 0 auto;
 }
-
 body main .spiner_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 body main .products_container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
 }
-
 body main .products_container article {
-  -ms-grid-column-align: center;
-      justify-self: center;
-  -webkit-transition: 0.1s;
+  justify-self: center;
   transition: 0.1s;
 }
-
 body main .products_container article .img_card {
   height: 16rem;
-  -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
-
 body main .products_container article:hover {
-  -webkit-box-shadow: 0px 0px 7px 0px #c8c8c8;
-          box-shadow: 0px 0px 7px 0px #c8c8c8;
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
+  box-shadow: 0px 0px 7px 0px rgb(200, 200, 200);
+  transform: scale(1.01);
   z-index: 100;
 }
-
 @media only screen and (max-width: 1100px) {
   body main .products_container {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
-
 @media only screen and (max-width: 830px) {
   body main .products_container {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media only screen and (max-width: 555px) {
   body main .products_container {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
-
 body main .pagination_container .page-item {
   cursor: pointer;
 }
-
 body footer {
   padding: 3rem 0;
 }
+
+body main .doc_container .span_code {
+  padding: 0 0.3rem;
+  background-color: rgb(216, 216, 216);
+}
+body main .doc_container .code_container {
+  background-color: rgb(216, 216, 216);
+}
+
 /*# sourceMappingURL=style.css.map */
